添加个人能力图表
添加coggle个人能力链接

--- a/index.html
+++ b/index.html
@@ -204,6 +204,10 @@
 
 						</div>
 					</section>
+					<section id="ability" class="ability">
+						
+						<iframe src="https://embed.coggle.it/diagram/VvedR-5POwt3P1oA/29ef42ea16b4a8b5a16e1de5bada6fcb09e689cab5c0ca7f7f7fd691480b6e66" allowfullscreen="" frameborder="0" height="480" width="853"></iframe>
+					</section>
 			
 				<!-- Contact -->
 					<section id="contact" class="four">
